--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li style="border-left:1px solid #f1f1f1;"><a href="#">INR</a></li>
+        <li style="border-left:1px solid #f1f1f1;"><a href="second.html">Second Page</a></li>
         <li style="border-left:1px solid #f1f1f1;"class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Profile <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -51,7 +52,7 @@
 <div class="input-group">
 <input id="1" class="form-control" type="text" name="search" placeholder="Search..." required/>
 <span class="input-group-btn">
-<button class="btn btn-primary" type="submit">
+<button class="btn btn-primary" src="second.html">
 <i class="glyphicon glyphicon-search" aria-hidden="true"></i> Search
 </button>
 </span>
